--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ select, label {
     <nav>
       <div class="nav__header">
         <div class="nav__logo">
-          <a href="#" class="logo">MigeBot</a>
+          <a href="#" class="logo">EmpowerAppSuite</a>
         </div>
         <div class="nav__menu__btn" id="menu-btn">
           <i class="ri-menu-line"></i>
@@ -620,7 +620,7 @@ select, label {
       <div class="section__container footer__container">
         <div class="footer__col">
           <div class="footer__logo">
-            <a href="#" class="logo">MigeBot</a>
+            <a href="#" class="logo">EmpowerAppSuite</a>
           </div>
           <p>
             Join us in building strong, connected families and communities with accessible, reliable resources.
@@ -650,7 +650,7 @@ select, label {
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2024 MigeBot. All rights reserved.
+        Copyright © 2024 EmpowerAppSuite. All rights reserved.
       </div>
     </footer>
 
